--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "Entrega 2 do Bootcamp da Avanti - Backend API",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "uuid": "^10.0.0"
