--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "prisma:migrate": "npx  prisma  migrate  dev  --name  init",
-    "prisma:generate": "npx  prisma  generate"
+    "prisma:migrate": "npx  prisma  migrate  dev",
+    "prisma:generate": "npx  prisma  generate",
+    "prisma:studio": "npx  prisma  studio"
   },
   "keywords": [],
   "author": "Equipe Library Loops",
